Transformation must end with visibility hidden. Fixes tab navigation to hidden li item

--- a/css/awesomplete.css
+++ b/css/awesomplete.css
@@ -53,6 +53,7 @@
 		opacity: 0;
 		transform: scale(0);
 		display: block;
+		visibility: hidden;
 		transition-timing-function: ease;
 	}
 }
